[package]
name = "lmdb-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
byteorder = "1.5.0"
clap = { version = "4.5.17", features = ["cargo", "derive"] }
error-stack = "0.5.0"
tempfile = "3.12.0"

[dependencies.tracing]
version = "0.1.40"

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
